# cs6350_s19_project

./: README.md
code/ws/src/ll4ma_kdl/: .gitignore  CMakeLists.txt  package.xml
code/ws/src/ll4ma_kdl/include/ll4ma_kdl/manipulator_kdl/: robot_kdl.h
code/ws/src/ll4ma_kdl/include/ll4ma_kdl/utils/: transforms.h
code/ws/src/ll4ma_kdl/scripts/: handArmModel.py
code/ws/src/ll4ma_kdl/src/: kdl_test_node.cpp
code/ws/src/ll4ma_kdl/src/manipulator_kdl/: robot_kdl.cpp  robot_kdl_bck.cpp
code/ws/src/ll4ma_msgs/ll4ma_logger_msgs/: CMakeLists.txt  package.xml
code/ws/src/ll4ma_msgs/ll4ma_logger_msgs/msg/: LBR4.msg  RobotState.msg
code/ws/src/ll4ma_msgs/ll4ma_logger_msgs/srv/: SaveTrajectoryExecution.srv
code/ws/src/ll4ma_msgs/ll4ma_robot_control_msgs/: CMakeLists.txt  package.xml
code/ws/src/ll4ma_msgs/ll4ma_robot_control_msgs/msg/: CartesianCommand.msg
code/ws/src/ll4ma_msgs/ll4ma_trajectory_msgs/: CMakeLists.txt  package.xml
code/ws/src/ll4ma_msgs/ll4ma_trajectory_msgs/msg/: TaskTrajectory.msg  TaskTrajectoryPoint.msg
code/ws/src/ll4ma_msgs/ll4ma_trajectory_msgs/srv/: GetTaskTrajectory.srv  RobotTrajectory.srv  SetTaskTrajectory.srv
code/ws/src/ll4ma_robot_control/: .gitignore  .ll4ma_robot_control.rosinstall  CMakeLists.txt  README.md  package.xml  setup.py
code/ws/src/ll4ma_robot_control/docs/: doxygen_config
code/ws/src/ll4ma_robot_control/include/ll4ma_robot_control/: control.h  controller_manager.h  joint_pd_control.h  task_inv_dyn_control.h  task_velocity_control.h
code/ws/src/ll4ma_robot_control/include/ll4ma_robot_control/needs_refactoring/: os_control.h  os_force_null_inv_dyn_control.h  os_hybrid_force_position_control.h  os_parallel_force_position_control.h
code/ws/src/ll4ma_robot_control/launch/lbr4/: lbr4_task_velocity_control.launch
code/ws/src/ll4ma_robot_control/msg/: Constraint.msg  OpSpaceCommand.msg
code/ws/src/ll4ma_robot_control/scripts/: test_task_position_control.py  test_velocity_control.py
code/ws/src/ll4ma_robot_control/src/ll4ma_robot_control/: control.cpp  control_switcher.py  controller_manager.cpp  joint_pd_control.cpp  task_inv_dyn_control.cpp  task_velocity_control.cpp
code/ws/src/ll4ma_robot_control/src/ll4ma_robot_control/lbr4/: lbr4_velocity_control.cpp
code/ws/src/ll4ma_robot_control/src/ll4ma_robot_control/needs_refactoring/: lbr4_computed_torque_controller.cpp  lbr4_inv_dynamics_controller.cpp  os_control.cpp  os_force_null_inv_dyn_control.cpp  os_hybrid_force_position_control.cpp
code/ws/src/ll4ma_robot_control/srv/: JointPosition.srv  SwitchControl.srv
code/ws/src/ll4ma_robot_interface/: CMakeLists.txt  README.md  package.xml
code/ws/src/ll4ma_robot_interface/config/: allegro_joint_pd_control.yaml  lbr4_joint_pd_control.yaml  lbr4_reflex_joint_pd_control.yaml  lbr4_robot.yaml  lbr4_task_inv_dyn_control.yaml  reflex_joint_pd_control.yaml
code/ws/src/ll4ma_robot_interface/include/allegro_robot_interface/: allegro_interface.h
code/ws/src/ll4ma_robot_interface/include/baxter_robot_interface/: baxter_interface.h
code/ws/src/ll4ma_robot_interface/include/lbr4_robot_interface/: lbr4_interface.h
code/ws/src/ll4ma_robot_interface/include/ll4ma_robot_interface/: robot_interface.h  types.h
code/ws/src/ll4ma_robot_interface/include/reflex_robot_interface/: reflex_interface.h
code/ws/src/ll4ma_robot_interface/launch/: lbr4_params.launch
code/ws/src/ll4ma_robot_interface/scripts/: reflex_grasp.py
code/ws/src/ll4ma_robot_interface/src/allegro_robot_interface/: allegro_interface.cpp
code/ws/src/ll4ma_robot_interface/src/baxter_robot_interface/: baxter_arm_state_publisher.py  baxter_interface.cpp  disable_baxter_gravity.py
code/ws/src/ll4ma_robot_interface/src/lbr4_robot_interface/: lbr4_interface.cpp
code/ws/src/ll4ma_robot_interface/src/ll4ma_robot_interface/: robot_interface.cpp
code/ws/src/ll4ma_robot_interface/src/reflex_robot_interface/: reflex_interface.cpp
code/ws/src/ll4ma_robots_gazebo/: .baxter_depends.rosinstall  .gitignore  .ll4ma_robots_gazebo.http.rosinstall  .ll4ma_robots_gazebo.ssh.rosinstall  CMakeLists.txt  LICENSE.txt  README.md  install_dependencies.sh  package.xml  setup.py
code/ws/src/ll4ma_robots_gazebo/config/control/lbr4/: lbr4_effort_control.yaml  (+2 more)
code/ws/src/ll4ma_robots_gazebo/launch/: allegro_control.launch  empty_world_dart.launch  grasp_scene.launch  lbr4.launch  lbr4_control.launch  reflex_control.launch  reload_parameters.launch
code/ws/src/ll4ma_robots_gazebo/scripts/: data_collection.py  data_grabber.py  gazebo_robot_spawner.py  object_api.py  reload_parameters.py
code/ws/src/ll4ma_robots_gazebo/src/: joint_state_splitter.cpp  joint_tester.py  robot_joint_wrapper.cpp
code/ws/src/ll4ma_robots_gazebo/src/control/: control_manager.cpp
code/ws/src/ll4ma_robots_gazebo/src/deprecated/: allegro_effort_pub.cpp  allegro_velocity_pub.cpp  lbr4_effort_pub.cpp  lbr4_velocity_pub.cpp
code/ws/src/ll4ma_robots_gazebo/worlds/: dart_empty.world  grasp_scene.world  push_cube.world  table.world
code/ws/src/point_cloud_segmentation/: .gitignore  CMakeLists.txt  README.md  README.org  README.txt  package.xml
code/ws/src/point_cloud_segmentation/include/tabletop_segmentation/: Tabletop_Segmentation.h  multiObjectSegmentation.h  singleObjectSegmentation.h
code/ws/src/point_cloud_segmentation/include/utils/: utils.h
code/ws/src/point_cloud_segmentation/launch/: grasp_segmenter_robot_frame.launch  table_obj_segmenter.launch  table_top_seg.launch
code/ws/src/point_cloud_segmentation/msg/: GraspObject.msg  MultiObjectFilter.msg
code/ws/src/point_cloud_segmentation/src/: ellipsoid_visualization.cpp  table_object_segmenter.cpp  tabletopNode.cpp
code/ws/src/point_cloud_segmentation/src/tabletop_segmentation/: Tabletop_Segmentation.cpp  multiObjectSegmentation.cpp  multiTopicSplitter.cpp  singleObjectSegmentation.cpp
code/ws/src/point_cloud_segmentation/src/tests/: test_utils.cpp
code/ws/src/point_cloud_segmentation/src/utils/: utils.cpp
code/ws/src/point_cloud_segmentation/srv/: FilterPCL.srv  GetVisualData.srv  SegmentGraspObject.srv  drawEllipsoid.srv
(+113 files in other folders)
