<?xml version="1.0"?>
<package>
  <name>ll4ma_robot_interface</name>
  <version>0.0.0</version>
  <description>The ll4ma_robot_interface package</description>
  <maintainer email="adam.conkey@utah.edu">Adam Conkey</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ll4ma_kdl</build_depend>
  <build_depend>ll4ma_robot_control_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ll4ma_kdl</run_depend>
  <run_depend>ll4ma_robot_control_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  
  <export></export>
  
</package>
