<?xml version="1.0"?>
<package>

  <name>ll4ma_robots_gazebo</name>
  <version>0.0.0</version>
  <description>The ll4ma_robots_gazebo package</description>
  <maintainer email="bala@todo.todo">bala</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ll4ma_robot_control</build_depend>
  <build_depend>ll4ma_robot_interface</build_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>controller_manager</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>ll4ma_robot_control</run_depend>

  <export> </export>
  
</package>
